fix sub nav links vertical align issue on safari

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -134,6 +134,7 @@ html,body {
 	position: relative;
   	top: 50%;
   	transform: translateY(50%);
+  	-webkit-transform: translateY(50%);
 }
 
 /* BODY */
